更新asm解析泛型